Fix main text alignment

--- a/main.css
+++ b/main.css
@@ -26,8 +26,8 @@ p {
   color: #fff;
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.5rem;
-  margin: 30px;
-  margin-right: 500px;
+  margin: 80px auto;
+  width: 80%;
 }
 
 .navbar {
